[metadata]
name = lv
version = 0.0.4
url = https://github.com/t-c-w/lv
platforms = any
description_file = README.md
description = Utils to slurp stuff
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = lv

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
